--- a/app/src/main/res/layout/fragment_registrar.xml
+++ b/app/src/main/res/layout/fragment_registrar.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".RegistrarFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="INICIAR SESIÓN"
+        android:text="REGISTRAR USUARIO"
         android:textSize="30sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginBottom="20dp"/>
     <EditText
-        android:id="@+id/tvt_correo"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textSize="25sp"
@@ -27,7 +25,6 @@
         android:layout_gravity="center"
         android:textColor="@color/black"/>
     <EditText
-        android:id="@+id/tvt_contraseña"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textSize="25sp"
@@ -35,21 +32,22 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:textColor="@color/black"/>
-
-    <Button
-        android:id="@+id/nuevoApp"
+    <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="¿No tienes cuenta?" />
-
+        android:textSize="25sp"
+        android:hint="Confirmar Contraseña"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textColor="@color/black"/>
     <Button
-        android:id="@+id/btnIngresar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginTop="10dp"
-        android:text="INGRESAR"
-        android:onClick="Ingresar"/>
+        android:text="REGISTRAR"
+        android:onClick="Registrar"/>
+
 </LinearLayout>
