--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:id="@+id/contenedorFragments"
-    tools:context=".MainActivity">
+    tools:context=".RegistroActivity">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -43,7 +43,31 @@
         android:gravity="center"
         android:layout_gravity="center"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="¿No tienes cuenta?"/>
 
+        <Button
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:background="null"
+            android:text="Regístrate"
+            android:textAllCaps="false"/>
+
+    </LinearLayout>
 
 </LinearLayout>
