--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -21,40 +21,13 @@
             android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:includeFontPadding="false"
-                android:text="Bienvenido a"
-                android:textColor="@color/colorTextIcons"
-                android:textSize="16sp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:includeFontPadding="false"
-                android:layout_marginTop="4dp"
-                android:text="Video Meeting | Oficinas virtuales"
-                android:textColor="@color/colorTextIcons"
-                android:textSize="16sp"/>
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_bg"
+                android:layout_gravity="center"/>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/text_is"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textStyle="bold"
-            android:text="Inicia sesión con tu cuenta"
-            android:includeFontPadding="false"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_header"
-            />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_is"
@@ -63,7 +36,7 @@
             android:layout_marginStart="40dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/text_is">
+            app:layout_constraintTop_toBottomOf="@+id/layout_header">
 
             <LinearLayout
                 android:layout_width="match_parent"
