--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.activities.ContactaActivity">
+    android:orientation="vertical"
+    tools:context=".actividades.MainActivity2">
 
     <LinearLayout
         android:id="@+id/layout_header"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/colorPrimary"
+        android:background="@color/black"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingEnd="8dp">
 
         <TextView
             android:id="@+id/textTittle"
@@ -25,7 +25,7 @@
             android:layout_weight="1"
             android:includeFontPadding="false"
             android:textStyle="bold"
-            android:textColor="@color/colorTextIcons"
+            android:textColor="@color/white"
             android:textSize="15sp"/>
 
         <TextView
@@ -35,38 +35,27 @@
             android:gravity="center"
             android:textStyle="bold"
             android:text="Cerrar sesión"
-            android:textColor="@color/colorBackground"
+            android:textColor="@color/white"
             android:textSize="16sp"/>
 
     </LinearLayout>
 
     <!--Actualizacion de deslizamiento-->
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
+    <!--<ListView
+        android:id="@+id/ListViewSala"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout_header">
+        android:layout_height="match_parent" />-->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/usersRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-    <TextView
-        android:id="@+id/textErrorMessage"
+    <ListView
+        android:id="@+id/ListViewUniveridad"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:includeFontPadding="false"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="13sp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/layout_header"/>
+        android:layout_height="match_parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/conferenceName"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_margin="12dp"
+        android:hint="Enter room name"
+        android:visibility="invisible"/>
+</LinearLayout>
