--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#e4d920</color>
+    <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#e4d920</color>
-    <color name="purple_200">#898213</color>
-    <color name="purple_500">#e4d920</color>
-    <color name="purple_700">#b6ae1a</color>
-    <color name="teal_200">#cdc31d</color>
-    <color name="teal_700">#a09816</color>
+    <color name="colorAccent">#03DAC5</color>
+
+    <color name="purple_200">#74FF76</color>
+    <color name="purple_500">#74FF76</color>
+    <color name="purple_700">#35A605</color>
+
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimaryText">#212121</color>
-    <color name="colorSecundaryText">#757575</color>
-    <color name="colorDivider">#BDBDBD</color>
-    <color name="colorTextIcons">#FFFFFF</color>
-    <color name="colorBackground">#FAFAFA</color>
-    <color name="colorHintText">#BDBDBD</color>
-    <color name="colorMeetingInvitationStart">#4004BB</color>
-    <color name="colorMeetingInvitationEnd">#8A1AAA</color>
 </resources>
